update and rebuild README.md

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,8 @@ random_NAs <- iidr(10, na_prob = 0.2)
 Random sample generator based on Douglas Adams' The Hitchhiker's Guide to the Galaxy. It also allows random insertion of NAs in a dataset (inspired by the
 [wakefield](https://github.com/trinker/wakefield) package).
 
-Currently in development.
+:warning: Currently in development. No warranty for deprecated functions as I 
+come up with names I like better.
 
 To install:
 
